Projects/Ampliacion_punteros/src/parser/y.output
   0  $accept : program $end

   1  program : opt_def_glob_var main

   2  glob_def : var_def
   3           | func_def

   4  opt_def_glob_var : opt_def_glob_var glob_def
   5                   |

   6  var_def : p_type list_ident ';'
   7          | array list_ident ';'
   8          | struct_type list_ident ';'
   9          | puntero list_ident ';'

  10  local_var_def : var_def

  11  opt_list_local_var : opt_list_local_var local_var_def
  12                     |

  13  opt_list_fields : opt_list_fields type list_ident ';'
  14                  |

  15  struct_type : STRUCT '{' opt_list_fields '}'

  16  main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}'

  17  func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'
  18           | VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'

  19  list_param : list_param ',' p_type ID
  20             | p_type ID

  21  opt_list_param : list_param
  22                 |

  23  p_type : INT
  24         | DOUBLE
  25         | CHAR

  26  array : type '[' INT_CONSTANT ']'

  27  type : p_type
  28       | array
  29       | struct_type
  30       | puntero

  31  puntero : type '*'

  32  list_ident : list_ident ',' ID
  33             | ID

  34  statements : statements statement
  35             |

  36  statement : RETURN exp ';'
  37            | READ list_exp ';'
  38            | WRITE list_exp ';'
  39            | if_else
  40            | while
  41            | exp '=' exp ';'
  42            | ID '(' opt_list_exp ')' ';'

  43  while : WHILE '(' exp ')' '{' statements '}'
  44        | WHILE '(' exp ')' statement

  45  if_else : IF '(' exp ')' '{' statements '}' ELSE '{' statements '}'
  46          | IF '(' exp ')' '{' statements '}' ELSE statement
  47          | IF '(' exp ')' statement ELSE '{' statements '}'
  48          | IF '(' exp ')' statement ELSE statement
  49          | IF '(' exp ')' '{' statements '}'
  50          | IF '(' exp ')' statement

  51  opt_list_exp : list_exp
  52               |

  53  list_exp : list_exp ',' exp
  54           | exp

  55  exp : exp '+' exp
  56      | exp '*' exp
  57      | exp '/' exp
  58      | exp '-' exp
  59      | exp '%' exp
  60      | exp EQ exp
  61      | exp NOT_EQ exp
  62      | exp '>' exp
  63      | exp '<' exp
  64      | exp L_EQ exp
  65      | exp G_EQ exp
  66      | exp AND exp
  67      | exp OR exp
  68      | '(' p_type ')' exp
  69      | exp '[' exp ']'
  70      | exp '.' ID
  71      | ID '(' opt_list_exp ')'
  72      | '-' exp
  73      | '(' exp ')'
  74      | '!' exp
  75      | INT_CONSTANT
  76      | ID
  77      | CHAR_CONSTANT
  78      | REAL_CONSTANT
  79      | '&' exp
  80      | '*' exp

state 0
	$accept : . program $end  (0)
	opt_def_glob_var : .  (5)

	.  reduce 5

	program  goto 1
	opt_def_glob_var  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : opt_def_glob_var . main  (1)
	opt_def_glob_var : opt_def_glob_var . glob_def  (4)

	VOID  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	.  error

	main  goto 8
	glob_def  goto 9
	var_def  goto 10
	func_def  goto 11
	p_type  goto 12
	array  goto 13
	struct_type  goto 14
	puntero  goto 15
	type  goto 16


state 3
	main : VOID . MAIN '(' ')' '{' opt_list_local_var statements '}'  (16)
	func_def : VOID . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (18)

	ID  shift 17
	MAIN  shift 18
	.  error


state 4
	p_type : DOUBLE .  (24)

	.  reduce 24


state 5
	p_type : CHAR .  (25)

	.  reduce 25


state 6
	struct_type : STRUCT . '{' opt_list_fields '}'  (15)

	'{'  shift 19
	.  error


state 7
	p_type : INT .  (23)

	.  reduce 23


state 8
	program : opt_def_glob_var main .  (1)

	.  reduce 1


state 9
	opt_def_glob_var : opt_def_glob_var glob_def .  (4)

	.  reduce 4


state 10
	glob_def : var_def .  (2)

	.  reduce 2


state 11
	glob_def : func_def .  (3)

	.  reduce 3


state 12
	var_def : p_type . list_ident ';'  (6)
	func_def : p_type . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	type : p_type .  (27)

	ID  shift 20
	'*'  reduce 27
	'['  reduce 27

	list_ident  goto 21


state 13
	var_def : array . list_ident ';'  (7)
	type : array .  (28)

	ID  shift 22
	'*'  reduce 28
	'['  reduce 28

	list_ident  goto 23


state 14
	var_def : struct_type . list_ident ';'  (8)
	type : struct_type .  (29)

	ID  shift 22
	'*'  reduce 29
	'['  reduce 29

	list_ident  goto 24


state 15
	var_def : puntero . list_ident ';'  (9)
	type : puntero .  (30)

	ID  shift 22
	'*'  reduce 30
	'['  reduce 30

	list_ident  goto 25


state 16
	array : type . '[' INT_CONSTANT ']'  (26)
	puntero : type . '*'  (31)

	'*'  shift 26
	'['  shift 27
	.  error


state 17
	func_def : VOID ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (18)

	'('  shift 28
	.  error


state 18
	main : VOID MAIN . '(' ')' '{' opt_list_local_var statements '}'  (16)

	'('  shift 29
	.  error


state 19
	struct_type : STRUCT '{' . opt_list_fields '}'  (15)
	opt_list_fields : .  (14)

	.  reduce 14

	opt_list_fields  goto 30


state 20
	func_def : p_type ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	list_ident : ID .  (33)

	'('  shift 31
	';'  reduce 33
	','  reduce 33


state 21
	var_def : p_type list_ident . ';'  (6)
	list_ident : list_ident . ',' ID  (32)

	';'  shift 32
	','  shift 33
	.  error


state 22
	list_ident : ID .  (33)

	.  reduce 33


state 23
	var_def : array list_ident . ';'  (7)
	list_ident : list_ident . ',' ID  (32)

	';'  shift 34
	','  shift 33
	.  error


state 24
	var_def : struct_type list_ident . ';'  (8)
	list_ident : list_ident . ',' ID  (32)

	';'  shift 35
	','  shift 33
	.  error


state 25
	var_def : puntero list_ident . ';'  (9)
	list_ident : list_ident . ',' ID  (32)

	';'  shift 36
	','  shift 33
	.  error


state 26
	puntero : type '*' .  (31)

	.  reduce 31


state 27
	array : type '[' . INT_CONSTANT ']'  (26)

	INT_CONSTANT  shift 37
	.  error


state 28
	func_def : VOID ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (18)
	opt_list_param : .  (22)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 22

	p_type  goto 38
	opt_list_param  goto 39
	list_param  goto 40


state 29
	main : VOID MAIN '(' . ')' '{' opt_list_local_var statements '}'  (16)

	')'  shift 41
	.  error


state 30
	opt_list_fields : opt_list_fields . type list_ident ';'  (13)
	struct_type : STRUCT '{' opt_list_fields . '}'  (15)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	'}'  shift 42
	.  error

	p_type  goto 43
	array  goto 44
	struct_type  goto 45
	puntero  goto 46
	type  goto 47


state 31
	func_def : p_type ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	opt_list_param : .  (22)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 22

	p_type  goto 38
	opt_list_param  goto 48
	list_param  goto 40


state 32
	var_def : p_type list_ident ';' .  (6)

	.  reduce 6


state 33
	list_ident : list_ident ',' . ID  (32)

	ID  shift 49
	.  error


state 34
	var_def : array list_ident ';' .  (7)

	.  reduce 7


state 35
	var_def : struct_type list_ident ';' .  (8)

	.  reduce 8


state 36
	var_def : puntero list_ident ';' .  (9)

	.  reduce 9


state 37
	array : type '[' INT_CONSTANT . ']'  (26)

	']'  shift 50
	.  error


state 38
	list_param : p_type . ID  (20)

	ID  shift 51
	.  error


state 39
	func_def : VOID ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (18)

	')'  shift 52
	.  error


state 40
	list_param : list_param . ',' p_type ID  (19)
	opt_list_param : list_param .  (21)

	','  shift 53
	')'  reduce 21


state 41
	main : VOID MAIN '(' ')' . '{' opt_list_local_var statements '}'  (16)

	'{'  shift 54
	.  error


state 42
	struct_type : STRUCT '{' opt_list_fields '}' .  (15)

	.  reduce 15


state 43
	type : p_type .  (27)

	.  reduce 27


state 44
	type : array .  (28)

	.  reduce 28


state 45
	type : struct_type .  (29)

	.  reduce 29


state 46
	type : puntero .  (30)

	.  reduce 30


state 47
	opt_list_fields : opt_list_fields type . list_ident ';'  (13)
	array : type . '[' INT_CONSTANT ']'  (26)
	puntero : type . '*'  (31)

	ID  shift 22
	'*'  shift 26
	'['  shift 27
	.  error

	list_ident  goto 55


state 48
	func_def : p_type ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (17)

	')'  shift 56
	.  error


state 49
	list_ident : list_ident ',' ID .  (32)

	.  reduce 32


state 50
	array : type '[' INT_CONSTANT ']' .  (26)

	.  reduce 26


state 51
	list_param : p_type ID .  (20)

	.  reduce 20


state 52
	func_def : VOID ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (18)

	'{'  shift 57
	.  error


state 53
	list_param : list_param ',' . p_type ID  (19)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	.  error

	p_type  goto 58


state 54
	main : VOID MAIN '(' ')' '{' . opt_list_local_var statements '}'  (16)
	opt_list_local_var : .  (12)

	.  reduce 12

	opt_list_local_var  goto 59


state 55
	opt_list_fields : opt_list_fields type list_ident . ';'  (13)
	list_ident : list_ident . ',' ID  (32)

	';'  shift 60
	','  shift 33
	.  error


state 56
	func_def : p_type ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (17)

	'{'  shift 61
	.  error


state 57
	func_def : VOID ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (18)
	opt_list_local_var : .  (12)

	.  reduce 12

	opt_list_local_var  goto 62


state 58
	list_param : list_param ',' p_type . ID  (19)

	ID  shift 63
	.  error


state 59
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	main : VOID MAIN '(' ')' '{' opt_list_local_var . statements '}'  (16)
	statements : .  (35)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 35
	REAL_CONSTANT  reduce 35
	RETURN  reduce 35
	ID  reduce 35
	WRITE  reduce 35
	IF  reduce 35
	READ  reduce 35
	WHILE  reduce 35
	CHAR_CONSTANT  reduce 35
	'!'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'('  reduce 35
	'}'  reduce 35
	'&'  reduce 35

	var_def  goto 64
	p_type  goto 65
	array  goto 13
	struct_type  goto 14
	puntero  goto 15
	local_var_def  goto 66
	type  goto 16
	statements  goto 67


state 60
	opt_list_fields : opt_list_fields type list_ident ';' .  (13)

	.  reduce 13


state 61
	func_def : p_type ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (17)
	opt_list_local_var : .  (12)

	.  reduce 12

	opt_list_local_var  goto 68


state 62
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (18)
	statements : .  (35)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 35
	REAL_CONSTANT  reduce 35
	RETURN  reduce 35
	ID  reduce 35
	WRITE  reduce 35
	IF  reduce 35
	READ  reduce 35
	WHILE  reduce 35
	CHAR_CONSTANT  reduce 35
	'!'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'('  reduce 35
	'}'  reduce 35
	'&'  reduce 35

	var_def  goto 64
	p_type  goto 65
	array  goto 13
	struct_type  goto 14
	puntero  goto 15
	local_var_def  goto 66
	type  goto 16
	statements  goto 69


state 63
	list_param : list_param ',' p_type ID .  (19)

	.  reduce 19


state 64
	local_var_def : var_def .  (10)

	.  reduce 10


state 65
	var_def : p_type . list_ident ';'  (6)
	type : p_type .  (27)

	ID  shift 22
	'*'  reduce 27
	'['  reduce 27

	list_ident  goto 21


state 66
	opt_list_local_var : opt_list_local_var local_var_def .  (11)

	.  reduce 11


state 67
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements . '}'  (16)
	statements : statements . statement  (34)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	RETURN  shift 72
	ID  shift 73
	WRITE  shift 74
	IF  shift 75
	READ  shift 76
	WHILE  shift 77
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'}'  shift 83
	'&'  shift 84
	.  error

	statement  goto 85
	exp  goto 86
	if_else  goto 87
	while  goto 88


state 68
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (17)
	statements : .  (35)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 35
	REAL_CONSTANT  reduce 35
	RETURN  reduce 35
	ID  reduce 35
	WRITE  reduce 35
	IF  reduce 35
	READ  reduce 35
	WHILE  reduce 35
	CHAR_CONSTANT  reduce 35
	'!'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'('  reduce 35
	'}'  reduce 35
	'&'  reduce 35

	var_def  goto 64
	p_type  goto 65
	array  goto 13
	struct_type  goto 14
	puntero  goto 15
	local_var_def  goto 66
	type  goto 16
	statements  goto 89


state 69
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (18)
	statements : statements . statement  (34)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	RETURN  shift 72
	ID  shift 73
	WRITE  shift 74
	IF  shift 75
	READ  shift 76
	WHILE  shift 77
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'}'  shift 90
	'&'  shift 84
	.  error

	statement  goto 85
	exp  goto 86
	if_else  goto 87
	while  goto 88


state 70
	exp : INT_CONSTANT .  (75)

	.  reduce 75


state 71
	exp : REAL_CONSTANT .  (78)

	.  reduce 78


state 72
	statement : RETURN . exp ';'  (36)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 92


state 73
	statement : ID . '(' opt_list_exp ')' ';'  (42)
	exp : ID . '(' opt_list_exp ')'  (71)
	exp : ID .  (76)

	'('  shift 93
	EQ  reduce 76
	OR  reduce 76
	AND  reduce 76
	NOT_EQ  reduce 76
	G_EQ  reduce 76
	L_EQ  reduce 76
	'='  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'['  reduce 76
	'.'  reduce 76


state 74
	statement : WRITE . list_exp ';'  (38)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 94
	list_exp  goto 95


state 75
	if_else : IF . '(' exp ')' '{' statements '}' ELSE '{' statements '}'  (45)
	if_else : IF . '(' exp ')' '{' statements '}' ELSE statement  (46)
	if_else : IF . '(' exp ')' statement ELSE '{' statements '}'  (47)
	if_else : IF . '(' exp ')' statement ELSE statement  (48)
	if_else : IF . '(' exp ')' '{' statements '}'  (49)
	if_else : IF . '(' exp ')' statement  (50)

	'('  shift 96
	.  error


state 76
	statement : READ . list_exp ';'  (37)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 94
	list_exp  goto 97


state 77
	while : WHILE . '(' exp ')' '{' statements '}'  (43)
	while : WHILE . '(' exp ')' statement  (44)

	'('  shift 98
	.  error


state 78
	exp : CHAR_CONSTANT .  (77)

	.  reduce 77


state 79
	exp : '!' . exp  (74)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 99


state 80
	exp : '-' . exp  (72)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 100


state 81
	exp : '*' . exp  (80)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 101


state 82
	exp : '(' . p_type ')' exp  (68)
	exp : '(' . exp ')'  (73)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	p_type  goto 102
	exp  goto 103


state 83
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}' .  (16)

	.  reduce 16


state 84
	exp : '&' . exp  (79)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 104


state 85
	statements : statements statement .  (34)

	.  reduce 34


state 86
	statement : exp . '=' exp ';'  (41)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)

	EQ  shift 105
	OR  shift 106
	AND  shift 107
	NOT_EQ  shift 108
	G_EQ  shift 109
	L_EQ  shift 110
	'='  shift 111
	'>'  shift 112
	'<'  shift 113
	'+'  shift 114
	'-'  shift 115
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'['  shift 119
	'.'  shift 120
	.  error


state 87
	statement : if_else .  (39)

	.  reduce 39


state 88
	statement : while .  (40)

	.  reduce 40


state 89
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (17)
	statements : statements . statement  (34)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	RETURN  shift 72
	ID  shift 73
	WRITE  shift 74
	IF  shift 75
	READ  shift 76
	WHILE  shift 77
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'}'  shift 121
	'&'  shift 84
	.  error

	statement  goto 85
	exp  goto 86
	if_else  goto 87
	while  goto 88


state 90
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}' .  (18)

	.  reduce 18


state 91
	exp : ID . '(' opt_list_exp ')'  (71)
	exp : ID .  (76)

	'('  shift 122
	EQ  reduce 76
	OR  reduce 76
	AND  reduce 76
	NOT_EQ  reduce 76
	G_EQ  reduce 76
	L_EQ  reduce 76
	'='  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'['  reduce 76
	']'  reduce 76
	'.'  reduce 76
	')'  reduce 76
	';'  reduce 76
	','  reduce 76


state 92
	statement : RETURN exp . ';'  (36)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)

	EQ  shift 105
	OR  shift 106
	AND  shift 107
	NOT_EQ  shift 108
	G_EQ  shift 109
	L_EQ  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 114
	'-'  shift 115
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'['  shift 119
	'.'  shift 120
	';'  shift 123
	.  error


state 93
	statement : ID '(' . opt_list_exp ')' ';'  (42)
	exp : ID '(' . opt_list_exp ')'  (71)
	opt_list_exp : .  (52)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	')'  reduce 52

	exp  goto 94
	list_exp  goto 124
	opt_list_exp  goto 125


state 94
	list_exp : exp .  (54)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)

	EQ  shift 105
	OR  shift 106
	AND  shift 107
	NOT_EQ  shift 108
	G_EQ  shift 109
	L_EQ  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 114
	'-'  shift 115
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'['  shift 119
	'.'  shift 120
	')'  reduce 54
	';'  reduce 54
	','  reduce 54


state 95
	statement : WRITE list_exp . ';'  (38)
	list_exp : list_exp . ',' exp  (53)

	';'  shift 126
	','  shift 127
	.  error


state 96
	if_else : IF '(' . exp ')' '{' statements '}' ELSE '{' statements '}'  (45)
	if_else : IF '(' . exp ')' '{' statements '}' ELSE statement  (46)
	if_else : IF '(' . exp ')' statement ELSE '{' statements '}'  (47)
	if_else : IF '(' . exp ')' statement ELSE statement  (48)
	if_else : IF '(' . exp ')' '{' statements '}'  (49)
	if_else : IF '(' . exp ')' statement  (50)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 128


state 97
	statement : READ list_exp . ';'  (37)
	list_exp : list_exp . ',' exp  (53)

	';'  shift 129
	','  shift 127
	.  error


state 98
	while : WHILE '(' . exp ')' '{' statements '}'  (43)
	while : WHILE '(' . exp ')' statement  (44)

	INT_CONSTANT  shift 70
	REAL_CONSTANT  shift 71
	ID  shift 91
	CHAR_CONSTANT  shift 78
	'!'  shift 79
	'-'  shift 80
	'*'  shift 81
	'('  shift 82
	'&'  shift 84
	.  error

	exp  goto 130


state 99
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '!' exp .  (74)

	EQ  shift 105
	NOT_EQ  shift 108
	G_EQ  shift 109
	L_EQ  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 114
	'-'  shift 115
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'['  shift 119
	'.'  shift 120
	OR  reduce 74
	AND  reduce 74
	'='  reduce 74
	']'  reduce 74
	')'  reduce 74
	';'  reduce 74
	','  reduce 74


state 100
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '-' exp .  (72)

	'['  shift 119
	'.'  shift 120
	EQ  reduce 72
	OR  reduce 72
	AND  reduce 72
	NOT_EQ  reduce 72
	G_EQ  reduce 72
	L_EQ  reduce 72
	'='  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	']'  reduce 72
	')'  reduce 72
	';'  reduce 72
	','  reduce 72


state 101
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '*' exp .  (80)

	'['  shift 119
	'.'  shift 120
	EQ  reduce 80
	OR  reduce 80
	AND  reduce 80
	NOT_EQ  reduce 80
	G_EQ  reduce 80
	L_EQ  reduce 80
	'='  reduce 80
	'>'  reduce 80
	'<'  reduce 80
	'+'  reduce 80
	'-'  reduce 80
	'*'  reduce 80
	'/'  reduce 80
	'%'  reduce 80
	']'  reduce 80
	')'  reduce 80
	';'  reduce 80
	','  reduce 80


state 102
	exp : '(' p_type . ')' exp  (68)

	')'  shift 131
	.  error


state 103
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '(' exp . ')'  (73)

	EQ  shift 105
	OR  shift 106
	AND  shift 107
	NOT_EQ  shift 108
	G_EQ  shift 109
	L_EQ  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 114
	'-'  shift 115
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'['  shift 119
	'.'  shift 120
	')'  shift 132
	.  error

